...
                  ),
                  Padding(
                    padding: const EdgeInsets.only(left: 120.0),
                    child: SizedBox(
                        width: 450,
                        child: Text(
                          'Log in to Flipper by QR Code',
                          style: GoogleFonts.poppins(
                              fontWeight: FontWeight.w400,
                              fontSize: 20,
                              color: Colors.black),
                        )),
                  ),
...
