...
  "rallyTitleSettings": "SETTINGS",
  "rallyLoginLoginToRally": "Log in to Rally",
  "rallyLoginNoAccount": "Don't have an account?",
  "rallyLoginSignUp": "SIGN UP",
  "rallyLoginUsername": "Username",
  "rallyLoginPassword": "Password",
  "rallyLoginLabelLogin": "Log in",
  "rallyLoginRememberMe": "Remember me",
  "rallyLoginButtonLogin": "LOGIN",
  "rallyAlertsMessageHeadsUpShopping": "Beware: you’ve used up {percent} of your shopping budget for this month.",
  "rallyAlertsMessageSpentOnRestaurants": "You’ve spent {amount} on restaurants this week.",
  "rallyAlertsMessageATMFees": "You’ve spent {amount} in ATM fees this month",
  "rallyAlertsMessageCheckingAccount": "Good work! Your current account is {percent} higher than last month.",
...
