...
                  color: Colors.black,
                ),
              ),
              Positioned(
                top: 45,
                right: 30,
                child: Text("Sign In",
                    style: GoogleFonts.poppins(
                        fontSize: 28, fontWeight: FontWeight.bold)),
              ),
              Padding(
                padding: EdgeInsets.all(20.0), // add padding here
                child: Column(
...
