...
                    onPressed: () {
                      setState(() {
                        showSignUpForm = true;
                      });
                    },
                    child: Text(
                      "Create Account",
                      style: GoogleFonts.poppins(
                          fontWeight: FontWeight.w400,
                          fontSize: 20,
                          color: Colors.white),
                    ),
                  ),
...
